# shylock

./: .dockerignore  .env.auth.example  .env.backend.example  .gitignore  dev.bat  dev.sh  docker-compose.override.yml  docker-compose.yaml  requirements.prod.txt  requirements.txt
backend/: .env.example  =0.0.9  Dockerfile  auth_main.py  main.py  pyproject.toml  seed_play_lines.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_shylock_trial.py  002_add_scene_dialogues_json.py  003_hp_dp_gauges.py  004_embedding_1536.py  005_trial_tubal_and_evidence_tracking.py  006_bassanio_plea_scene_index_shift.py  007_add_tubal_enhanced_choices.py  008_drop_portia_hp.py  009_drop_venice_contradiction_active.py  010_drop_shylock_hp.py  011_venice_dp_shield.py  012_drop_alien_law_executed.py  013_add_hp.py  014_venice_paradox_used.py  015_add_portia_hp.py  016_add_portia_reactions_json.py  017_seed_curated_evidence.py  018_add_portia_stances_json.py  019_seed_blood_reveal_items.py  020_drop_portia_stances_json.py  021_fix_jessica_letter_evidence.py  022_fix_venice_charter_quote.py  023_revert_charter_desc.py  024_add_users_and_trial_user_id.py  025_add_google_login.py
backend/apps/shylock_trial/app/constants/: curated_evidence.py  ending_type_map.py  game_balance.py  portia_logical_flaws.py  portia_prompt.py  (+7 more)
backend/apps/shylock_trial/dependencies/: docs_admin_auth_provider.py  evidence_search_provider.py  portia_response_provider.py  present_evidence_provider.py  trial_progression_provider.py  tubal_agent_provider.py  tubal_enhancement_provider.py  tubal_skill_provider.py  user_auth_provider.py
backend/auth/: __init__.py  rbac.py  router.py  schemas.py  services.py
backend/auth/docs/: SETUP.md  auth-gateway-harness.md
backend/auth/tests/: test_healthz.py  test_refresh_rotation.py
backend/core/: __init__.py  config.py  database.py  dependencies.py  rbac.py  redis.py  security.py
backend/core/tests/: test_security_jwt.py
backend/infrastructure/: asyncio_compat.py  config.py  database.py  redis.py
(+171 files in other folders)
