[project]
name = "shylock-backend"
version = "0.1.0"
description = "Shylock Trial — Hexagonal FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "anthropic>=0.49.0",
    "cohere>=5.13.0",
    "pgvector>=0.3.6",
    "redis>=5.2.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[project.scripts]
seed-play-lines = "shylock_trial.adapter.outbound.seeding.evidence_search_corpus_seeder:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["apps", "."]
testpaths = ["apps/shylock_trial/tests"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".", "apps"]
include = ["infrastructure*", "shylock_trial*"]
namespaces = false
